use cases still wip but some prgress

--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -3,6 +3,8 @@
 \section{Discussion}
 In this section we discuss the remaining results from our grounded theory work.
 
+% Jeremy: leverage of multiple use cases on teh same blockchain
+
 \subsection{Normative properties}
 \label{sec:normative}
 
