--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -15,6 +15,7 @@ This analysis revealed three key groups of properties: shared governance and ope
 By themselves, these property groups are nothing new, but used together they define \emph{Blockchain technology}, or \emph{Blockchain} for short.
 
 \subsection{Shared Governance and Operation}
+\label{sec:sharedgov}
 At the heart of Blockchain technology is the principle of shared governance and operation.
 Either of these properties is common by itself; for example, having multiple parties govern how a system should function, but then relying on trusted third-parties to operate and maintain the system.
 Alternatively, the literature is rife with well-defined systems that don't need ongoing governance but require multiple parties to actually operate and maintain the system.
