--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -44,9 +44,9 @@ The most prominent example of a private governance system is IBM's HyperLedger F
 Interestingly, the HyperLedger Fabric software project allows for consortium governance, but IBM's implementation has IBM run all of the miners.
 
 Ultimately, we do not classify such systems as Blockchain technology.
-First, these systems do not have shared governance, which we identify as the key component of Blockchain technology.
-Second, the party governing the system still represents a single-point of failure.
-While the miners within the operating organization might be run on a distributed infrastructure, there is still a high chance that a sufficient compromise in the operating organization would lead to a compromise in the Blockchain system.
+First, these systems do not neither shared governance nor shared operation, which we identify as the key component of Blockchain technology.
+Second, the entity operating the system still represents a single-point of failure.
+While the miners within the operating organization might be run on a distributed infrastructure, there is still a high chance that a compromise in the operating organization would lead to a compromise in the Blockchain system.
 Third, there is nothing that prevents the governing party from deleting or modifying data; even if such changes could be detected, the data itself is not replicated outside the organization and would be lost.
 This is not to say that such systems lack value---such an evaluation is beyond the scope of this paper---but rather we believe that these types of systems are distinct from the more decentralized Blockchain technology.
 
