--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -16,44 +16,78 @@ Unlike centralized cryptocurrencies which rely on a set of known entities to ope
 To incentivize public participation, Bitcoin pays participants (known as miners) for solving the proof-of-work puzzles.
 While Bitcoin's building blocks were not novel, the composition of these properties into a single system was a meaningful contribution~\cite{Narayanan17} which led the cryptocurrency to become the first to achieve widespread popularity and usage.
 
-At the peak of its popularity, Bitcoin's market capitalization reached \$835.69 billion (USD), though at the time of this writing it has seen a decrease in both its stature and market capitalization (\$67.21 billion).
+At the peak of its popularity, Bitcoin's market capitalization reached \$835.69 billion (USD), though at the time of this writing it has seen a decrease in both its stature and market capitalization (\$60.78 billion).
 Nevertheless, there remains significant interest in the question of whether the technology underlying Bitcoin---known as \emph{Blockchain technology} or {Blockchain} for short---could be used to build other interesting cryptocurrencies or distributed systems.
-In particular, we have consistently heard researchers, business executives, and government leadership ask the following three questions related to Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.%, and (4) how does it relate to other approache distributed technologies (e.g., distributed databases).
+In particular, we have consistently heard researchers, business executives, and government leadership ask the following three questions: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.%, and (4) how does it relate to other approache distributed technologies (e.g., distributed databases).
+
+Unfortunately, there is a lack of clarity regarding the answers to these questions in both the community and the literature.
+This lack of clarity stems---at least in part---from competing viewpoints and terminology regarding Blockchain technology, resulting in seemingly contradictory statements that can all be true in their respective contexts.
+In this paper, we attempt to address this ambiguity and provide a holistic overview of Blockchain technology, set forth a common lexicon for discussing Blockchain technology, and answer the three questions identified above.
+
+\begin{table}
+	\centering
+	
+	\begin{tabular}{l|l}
+		\textbf{Academia} & \textbf{Industry} \\
+		\hline
+		
+		Increased interest recently & Long-term interest \\
+		Focused on specific subsystems & Takes a holistic view \\
+		Technical experts & Use case experts \\ \hline
+	\end{tabular}
+	
+	\caption{Comparison of academic and industry sources on Blockchain technology}
+	\label{tab:sources}
+\end{table}
+
+To accomplish these goals, we conducted a textual analysis of papers on Blockchain technology from non-academic sources (hereafter referred to as \emph{industry}).
+The choice to focus our analysis on literature from industry was based on the unique suitability of that literature (see Table~\ref{tab:sources}) to answer the three questions we identified above:
+First, industry became heavily involved in writing on Blockchain technology before academia and has had more time to fully consider its implications.
+Second, industry literature generally focuses on discussing and evaluating Blockchain technology holistically, making it ideal to provide a high level overview for questions one and two.
+Third, much of industry literature is written by use case experts who are well positioned to answer the third question.
+
+In contrast, academic literature focuses on technical deep dives on Blockchain technology's subsystems and implementations built on Blockchain technology.
+For example, existing academic surveys on Blockchain technology have focused on particular systems or technical properties: Bitcoin~\cite{BMC+15,Narayanan17}, payment privacy~\cite{Conti17}, security and performance~\cite{Gervais16}, scalability~\cite{Croman16}, and consensus protocols~\cite{Bano17,garay2018consensus}.
+In this regard, the existing literature acts as a good compliment to this paper---i.e., researchers interested in Blockchain technology can gain read this paper to gain a holistic overview of the space then dive deeply into specific subtopics by reviewing other Blockchain survey papers.
 
 % Jeremy: We invert the common approach: we don't study blockchain people looking at use-cases, we study the use case people looking at blockchain
-To answer these questions, it is insufficient to consider academic sources alone.
-While there have been several academic overviews written in this space, they have not addressed these general question regarding Blockchain technology, but rather surveyed particular systems or technical properties: Bitcoin~\cite{BMC+15,Narayanan17}, payment privacy~\cite{Conti17}, security and performance~\cite{Gervais16}, scalability~\cite{Croman16}, and consensus protocols~\cite{Bano17,garay2018consensus}.
-In contrast, there has been significant work from non-academic sources (hereafter referred to as \emph{industry}) attempting to answer the questions as they search for applications and new product offerings that could be enabled by Blockchain technology.  Both freshly-formed and decades-old companies have developed answers to these questions.  Unfortunately, some of this work is fueled by hype and most industry documents are published without a peer-review process and associated rigor expected of academic literature.
+%To answer these questions, it is insufficient to consider academic sources alone.
+%In contrast, there has been significant work from non-academic sources (hereafter referred to as \emph{industry}) attempting to answer the questions as they search for applications and new product offerings that could be enabled by Blockchain technology.  Both freshly-formed and decades-old companies have developed answers to these questions.  Unfortunately, some of this work is fueled by hype and most industry documents are published without a peer-review process and associated rigor expected of academic literature.
 
-To address these limitations, we analyzed literature produced by industry using grounded theory methodology~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method).
-This allowed us to extract and separate valuable technical insights out from the hype and technical misunderstandings that permeate this body of work.
-Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the three questions commonly asked in relation to Blockchain technology, as well as shed light on industry's understandings and misunderstandings of the technology. 
+%To address these limitations, we analyzed literature produced by industry using grounded theory methodology~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method).
+%This allowed us to extract and separate valuable technical insights out from the hype and technical misunderstandings that permeate this body of work.
+%Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the three questions commonly asked in relation to Blockchain technology, as well as shed light on industry's understandings and misunderstandings of the technology. 
 
-While many of the results in this work might not be surprising to some readers, our experience suggests that knowledge of Blockchain technology is neither universal nor complete within the security community.
-Taken together, the results in this paper represent the most complete overview of Blockchain technology and its potential use cases available in a single work that we are aware of, and are intended to serve as an aid for researchers as they field questions related to Blockchain and as they explore whether Blockchain technology is relevant to their personal research areas. More concretely, our key contributions are:
+Ultimately, our technical analysis was successful at answering our three questions and in this paper we present answers to each of those questions.
+While some readers may find the results of this paper unsurprising or differing from their viewpoints regarding Blockchain technology, we believe that this paper will be helpful to the community at large (both Blockchain experts and non-experts) and provide a common reference point for discussion on Blockchain technology.
+%While many of the results in this work might not be surprising to some readers, our experience suggests that knowledge of Blockchain technology is neither universal nor complete within the security community.
+Taken together, the results in this paper represent the most complete overview of Blockchain technology and its potential use cases available in a single work that we are aware of, and are intended to serve as an aid for researchers as they field questions related to Blockchain and as they explore whether Blockchain technology is relevant to their personal research areas.
+More concretely, our key contributions are:
 
 \begin{enumerate}
-	\item \textbf{Defining the key technical properties of Blockchain technology.}
-	We identify three key properties for Blockchain technology: shared governance and operation, the use of an append-only ledger, and replication of data.
-	Blockchain systems are governed and operated by a distributed and decentralized collective of entities that ensure that all operations are valid.
-	These operations are recorded in an append-only ledger that provides full-system provenance.
-	This ledger is also replicated by a set of governing parties, providing resilience against data loss and malicious modification of data.
-	We also discuss associated technical properties that Blockchain makes use of.
+	\item \textbf{Providing a holistic overview of Blockchain technology's technical properties and the capabilities they enable.}
+	We identify three key group of properties for Blockchain technology: shared governance and operation, the use of an append-only, decentralized ledger, and operational resilience.
+	Taken together, these properties differentiate Blockchain technology from other distributed technologies.
+	Using these properties, systems built with Blockchain technology have easy access to a range of important capabilities: full-system provenance, auditability, access control, psuedonymity, automatic execution (i.e., smart contracts), data discoverability.
 	
-	\item \textbf{Identifying the capabilities provided by Blockchain technology.}
- 	Blockchain provides four important capabilities.
-	Blockchain systems inherently track full-system provenance, and this allows the system to be audited by miners and potentially by other parties.
-	Provenance is also useful in tracking assets monitored or managed by the Blockchain system (e.g., supply chain management, cryptocurrencies).
-	Blockchain technology provides access control for the assets it monitors or manages and can allow operations on these assets to be pseudonymous.
-	Provenance information and replication of that information among all miners provides a third important capability: resilience against accidental data loss or malicious modification of the data.
-	Finally, Blockchain systems can embed executable programs that can compute as appropriate and enjoy the benefits of Blockchain technology's other capabilities.
+%	Blockchain systems are governed and operated by a distributed and decentralized collective of entities that ensure that all operations are valid.
+%	These operations are recorded in an append-only ledger that provides full-system provenance.
+%	This ledger is also replicated by a set of governing parties, providing resilience against data loss and malicious modification of data.
+%	We also discuss associated technical properties that Blockchain makes use of.
+	
+%	\item \textbf{Identifying the capabilities provided by Blockchain technology.}
+% 	Blockchain provides four important capabilities.
+%	Blockchain systems inherently track full-system provenance, and this allows the system to be audited by miners and potentially by other parties.
+%	Provenance is also useful in tracking assets monitored or managed by the Blockchain system (e.g., supply chain management, cryptocurrencies).
+%	Blockchain technology provides access control for the assets it monitors or manages and can allow operations on these assets to be pseudonymous.
+%	Provenance information and replication of that information among all miners provides a third important capability: resilience against accidental data loss or malicious modification of the data.
+%	Finally, Blockchain systems can embed executable programs that can compute as appropriate and enjoy the benefits of Blockchain technology's other capabilities.
 	
 	\item \textbf{Identifying groups of applications (i.e., use cases) that are most likely to benefit from Blockchain technology.}
 	Within the literature we analyzed there was a range of potential applications for Blockchain technology.
 	We group these applications into a set of use cases and then discuss the likelihood that individual applications within the use case would benefit from the use of Blockchain technology.
 	Example use cases include cryptocurrencies, asset management, and multi-organization data sharing.
 	
-	%TODO: These need to be updated when I work through these sections and the discussion.
 	\item \textbf{Detailing challenges and limitations related to Blockchain technology.}
 	As part of our review of the literature, we identified several important challenges and limitations for Blockchain technology: scalability, smart contract correctness and dispute resolution, stapling of on-chain tokens to off-chain assets, key management, and regulation.
 	Many of this challenges represent important research questions with interesting potential for future research.
@@ -64,5 +98,11 @@ Taken together, the results in this paper represent the most complete overview o
 %	This taxonomy demonstrates that Blockchain technology is the most complex of the related distributed databases.
 %	As such, we recommend that applications leverage Blockchain technology only if they need the shared governance, provenance, auditability and resilience provided by Blockchain technology.
 
+	\item \textbf{Leveraging grounded theory to analyze industrial literature while limiting research bias and separating hype from sound technical details.}
+	While there are significant benefits to analyzing industrial literature, there is also a significant amount of hype and imprecise language.
+	To address these limitations, we leveraged the grounded theory methodology~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method) to extract and separate valuable technical insights out from the hype and technical misunderstandings that permeate this body of work.
+	Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the three questions we identified while remaining grounded in the data we analyzed.
+	We were also able to shed light on industry's understandings and misunderstandings of Blockchain technology. 
+	
 	
 \end{enumerate}
